add noscript fallback

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <html>
-    <head>
-        <title>Redirecting</title>
-    </head>
-    <body>
-        <!-- placeholde, redirects to OnlineCodex.de for now -->
-        <script>
-            location="https://www.onlinecodex.de/forum/portal.php";
-        </script>
-    </body>
+<head><title>Redirecting</title></head>
+<body>
+  <!-- placeholde, redirects to OnlineCodex.de for now -->
+  <script>
+  location="https://www.onlinecodex.de/forum/portal.php";
+  </script>
+  <p>
+  <!-- only visible if javascript is disabled-->
+  This page is under construction. Visit <a href="https://www.onlinecodex.de/forum/portal.php">onlinecodex.de</a> for now
+  </p>
+</body>
 </html>
